--- a/Source/SoA/SoA_Editor/Views/RangeView.xaml
+++ b/Source/SoA/SoA_Editor/Views/RangeView.xaml
@@ -31,7 +31,7 @@
             </StackPanel>
             <TextBlock>Please select a row by clicking on any of the values.</TextBlock>
         </StackPanel>
-        <GroupBox Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" Width="250" HorizontalAlignment="Right" Header="Formula" Margin="0 0 5 0">
+        <GroupBox Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" Width="400" HorizontalAlignment="Right" Header="Formula" Margin="0 0 5 0">
             <StackPanel>
                 <TextBlock Text="{Binding Formula1}" Margin="0,10,0,0" FontWeight="Bold" />
                 <TextBlock Text="{Binding Formula2, Mode=TwoWay}" FontWeight="Bold" Visibility="{Binding Formula2, Converter={StaticResource StringIsEmptyVisibilityConverter}}" />
@@ -41,7 +41,7 @@
                             <Grid>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="60" />
-                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="200" />
                                 </Grid.ColumnDefinitions>
                                 <TextBlock Text="{Binding Path=Name}" Grid.Column="0" VerticalAlignment="Center" />
                                 <TextBox Margin="10 0 0 0" Grid.Column="1" Text="{Binding Path=Value, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
