--- a/Source/SoA/SoA_Editor/Views/TechniqueView.xaml
+++ b/Source/SoA/SoA_Editor/Views/TechniqueView.xaml
@@ -142,7 +142,7 @@
                     <Border Style="{StaticResource HorizontalDividerBorder}" />
 
                     <!-- Assertions -->
-                    <Expander Header="Assertions" IsExpanded="False">
+                    <Expander Header="Assertions/Grouping" IsExpanded="False">
                         <StackPanel>
                             <DataGrid Name="Assertions" ItemsSource="{Binding Assertions, Mode=TwoWay}" AutoGenerateColumns="False" CanUserAddRows="False"
                                       CanUserDeleteRows="True" CanUserReorderColumns="True" CanUserSortColumns="True" Margin="0,0,0,20">
